syntax = "proto3";

package fr.raven.proto.message.game;

option java_outer_classname = "NearbyObjectOpcodeProto";

message NearbyObjectOpcode {
  uint64 guid = 1;
  float posX = 2;
  float posY = 3;
  float posZ = 4;
  float orientation = 5;
}