syntax = "proto3";

package fr.raven.proto.message.game;

option java_outer_classname = "PlayerProto";

message PlayerDescription {
  uint64 guid = 1;
  string name = 2;
}